--- a/Pixel/src/views/home.html
+++ b/Pixel/src/views/home.html
@@ -20,22 +20,126 @@
                 <button type="submit"><i class="fa-solid fa-magnifying-glass"></i></button>
             </form>
             <div class="icons-top-bar">
-                <a href="#"><i class="fa-regular fa-user"></i>Ingresar</a>
+                <a href="#"><i class="fa-regular fa-user"></i> Ingresar</a>
                 <a href="#">Registrarse</a>
-                <a href="#"><i class="fa-solid fa-cart-shopping"></i></a>
+                <a href="#"><i class="fa badge" style="font-size:24px" value=2>&#xf07a;</i></a>
             </div>
+        </div>
+        <div class="burger-menu">
+            <i class="fa-solid fa-bars"></i>
+        </div>
+        <nav class="nav-bar">
+            <ul>
+                <li><a href="#">Productos</a></li>
+                <li><a href="#">Arma tu PC</a></li>
+                <li><a href="#">PC listos</a></li>
+                <li><a href="#">Quienes Somos</a></li>
+                <li><a href="#">Ayuda</a></li>
+            </ul>
+
+        </nav>
+
+        <div class="banner">
+            <!-- <img src="/img/banner1.jpg" alt="banner"> -->
+            <img src="/img/banner2.jpg" alt="banner">
 
         </div>
-        
 
     </header>
-    <nav>
 
-    </nav>
     <main>
+
+        <section class="inSale">
+            <h2>LO MEJOR DEL DÍA</h2>
+            <div class="products">
+                <article>
+                    <img src="/img/asus.jpg" alt="producto">
+                    <div class="productInfo">
+                        <p class="price">$59.99</p>
+                        <p class="discount">25% off</p>
+                        <p class="description">Laptop</p>
+                    </div>
+                </article>
+
+                <article>
+                    <img src="/img/lenovo.jpg" alt="producto">
+                    <div class="productInfo">
+                        <p class="price">$59.99</p>
+                        <p class="discount">25% off</p>
+                        <p class="description">Laptop</p>
+                    </div>
+                </article>
+
+                <article>
+                    <img src="/img/hp.jpg" alt="producto">
+                    <div class="productInfo">
+                        <p class="price">$59.99</p>
+                        <p class="discount">25% off</p>
+                        <p class="description">Laptop</p>
+                    </div>
+                </article>
+
+                <article>
+                    <img src="/img/bangho.jpg" alt="producto">
+                    <div class="productInfo">
+                        <p class="price">$59.99</p>
+                        <p class="discount">25% off</p>
+                        <p class="description">Laptop</p>
+                    </div>
+                </article>
+            </div>
+        </section>
+
+        <section class="recomended">
+            <h2>RECOMENDACIONES</h2>
+            <div class="products">
+                <article>
+                    <img src="/img/asus.jpg" alt="producto">
+                    <div class="productInfo">
+                        <p class="price">$59.99</p>
+                        <p class="discount">25% off</p>
+                        <p class="description">Laptop</p>
+                    </div>
+                </article>
+
+                <article>
+                    <img src="/img/lenovo.jpg" alt="producto">
+                    <div class="productInfo">
+                        <p class="price">$59.99</p>
+                        <p class="discount">25% off</p>
+                        <p class="description">Laptop</p>
+                    </div>
+                </article>
+
+                <article>
+                    <img src="/img/hp.jpg" alt="producto">
+                    <div class="productInfo">
+                        <p class="price">$59.99</p>
+                        <p class="discount">25% off</p>
+                        <p class="description">Laptop</p>
+                    </div>
+                </article>
+
+                <article>
+                    <img src="/img/bangho.jpg" alt="producto">
+                    <div class="productInfo">
+                        <p class="price">$59.99</p>
+                        <p class="discount">25% off</p>
+                        <p class="description">Laptop</p>
+                    </div>
+                </article>
+            </div>
+        </section>
+
+        <div class="whatsapp">
+            <a href="#"><i class="fa-brands fa-whatsapp"></i></a>
+        </div>
 
     </main>
     <footer>
+        <div class="footer">
+
+        </div>
 
     </footer>
 </body>
