--- a/Pixel/src/views/index.html
+++ b/Pixel/src/views/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link rel="stylesheet" href="/css/normalize.css">
-    <link rel="stylesheet" href="/css/home.css">
+    <link rel="stylesheet" href="/css/index.css">
     <title>Pixel E-Comerce</title>
 </head>
 
@@ -29,19 +29,41 @@
             <i class="fa-solid fa-bars"></i>
         </div>
         <nav class="nav-bar">
-            <ul>
-                <li><a href="#">Productos</a></li>
-                <li><a href="#">Arma tu PC</a></li>
-                <li><a href="#">PC listos</a></li>
-                <li><a href="#">Quienes Somos</a></li>
-                <li><a href="#">Ayuda</a></li>
-            </ul>
 
+            <a href="#">
+                <div class="nav-bar-button">
+                    <p>Productos</p>
+                </div>
+            </a>
+
+            <a href="#">
+                <div class="nav-bar-button">
+                    <p>Arma tu PC</p>
+                </div>
+            </a>
+
+            <a href="#">
+                <div class="nav-bar-button">
+                    <p>PC listos</p>
+                </div>
+            </a>
+
+            <a href="#">
+                <div class="nav-bar-button">
+                    <p>Quiénes somos</p>
+                </div>
+            </a>
+
+            <a href="#">
+                <div class="nav-bar-button">
+                    <p>Ayuda</p>
+                </div>
+            </a>
         </nav>
 
         <div class="banner">
-            <!-- <img src="/img/banner1.jpg" alt="banner"> -->
-            <img src="/img/banner2.jpg" alt="banner">
+            <img src="/img/banner1.jpg" alt="banner">
+            <!-- <img src="/img/banner2.jpg" alt="banner"> -->
 
         </div>
 
