--- a/Pixel/src/views/index.html
+++ b/Pixel/src/views/index.html
@@ -161,6 +161,44 @@
     <footer>
         <div class="footer">
 
+            <div class="redes">
+
+                <div>
+                    <h3>¡Seguinos en nuestras redes sociales!</h3>
+                </div>
+                <div class="iconos">
+                    <i class="fab fa-whatsapp"></i>
+                    <i class="fab fa-instagram"></i>
+                    <i class="fab fa-twitter"></i>
+                </div>
+            </div>
+
+            <div class="informacion">
+                <ul class="lista1">
+                    <h4>Atención al cliente</h4>
+                    <li>+54 (011) 7079-9965</li>
+                    <li>Whatsapp: +54 (911) 3934-5678</li>
+                    <li>Nosotros</li>
+                    <li>Contáctanos</li>
+                </ul>
+                <ul class="lista2">
+                    <h4>Términos y condiciones</h4>
+                    <li>Condiciones de uso</li>
+                    <li>Politicas de garantía</li>
+                    <li>Políticas de privacidad</li>
+                </ul>
+
+                <ul class="lista3">
+                    <h4>Preguntas frecuentes</h4>
+                    <li>Preguntas frecuentes</li>
+                    <li>¿Cómo comprar?</li>
+                    <li>Envíos</li>
+
+                </ul>
+            </div>
+
+        </div>
+
         </div>
 
     </footer>
