--- a/Pixel/src/views/productCart.html
+++ b/Pixel/src/views/productCart.html
@@ -7,7 +7,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link rel="stylesheet" href="/css/normalize.css">
-    <link rel="stylesheet" href="/css/home.css">
     <link rel="stylesheet" href="/css/productCart.css">
     <title>Pixel E-Comerce</title>
 </head>
@@ -21,9 +20,9 @@
                 <button type="submit"><i class="fa-solid fa-magnifying-glass"></i></button>
             </form>
             <div class="icons-top-bar">
-                <a href="#"><i class="fa-regular fa-user"></i>Ingresar</a>
+                <a href="#"><i class="fa-regular fa-user"></i>          Ingresar</a>
                 <a href="#">Registrarse</a>
-                <a href="#"><i class="fa-solid fa-cart-shopping"></i></a>
+                <a href="/productCart"><i class="fa-solid fa-cart-shopping"></i></a>
             </div>
 
         </div>
@@ -34,54 +33,89 @@
 
     </nav>
     <main>
-        <h1>Mi carrito</h1>
+        <h2>Mi carrito</h2>
         <article>
-            <form action="/" method="post">
-                <form class="form1">
+            <form action="/#" method="get" class="formulario-padre">
+                <div class="productInfo">
                     <img src="/img/lenovo.jpg" alt="producto">
-                    <div class="productInfo">
-                        <i class="fas fa-truck"></i>
-                        <p class="price">$137.500</p>
-                        <p class="description">Laptop Lenovo</p>
-                        <p>Cantidad de productos</p>
-                        <input type="number" id="numero" class="boton"><br>
-                        <button class="boton" type="reset">Borrar</button>
-                </form>
-                <form class="form2">
-                    <img src="/img/bangho.jpg" alt="producto">
-                    <div class="productInfo">
-                        <i class="fas fa-truck"></i>
-                        <p class="price">$145.999</p>
-                        <p class="description">Laptop Bangho</p>
-                        <p>Cantidad de productos</p>
-                        <input type="number" id="numero" class="boton"><br>
-                        <button class="boton" type="reset">Borrar</button><br>
-
-                        <div class="medios-de-pago-padre">
-                            <p>Medios de medios de pago</p><br>
-                            <label>
-                                <input type="radio" name="medios-de-pago" class="medios-de-pago"
-                                    value="deposito-trasferencia">
-                                Deposito o Transferencia Bancaria</label><br>
-                            <label><input type="radio" name="medios-de-pago" class="medios-de-pago"
-                                    value="mercado-pago">
-                                Mercadopago - Tarjetas Online, PagoFacil, RapiPago</label><br>
-                            <label><input type="radio" name="medios-de-pago" class="medios-de-pago" value="pago-gamer">
-                                Pago Gamer - Tarjetas Visa o MasterCard</label>
-                        </div>
-                </form>
-                <button class="boton" type="submit">Comprar</button>
+                    <p class="description">Laptop Lenovo</p>
+                    <p class="price">$137.500</p>
+                    <p>Cantidad de productos</p>
+                    <input type="number" id="numero" class="boton">
+                    <button class="boton" type="reset">Borrar</button>
                 </div>
+
+                <div class="productInfo">
+                    <img src="/img/bangho.jpg" alt="producto">
+
+                    <p class="description">Laptop Bangho</p>
+                    <p class="price">$145.999</p>
+                    <p>Cantidad de productos</p>
+                    <input type="number" id="numero" class="boton">
+                    <button class="boton" type="reset">Borrar</button>
+                </div>
+                <div class="medios-de-pago-padre">
+                    <p>Medios de medios de pago</p>
+                    <label>
+                        <input type="radio" name="medios-de-pago" class="medios-de-pago" value="deposito-trasferencia">
+                        Deposito o Transferencia Bancaria</label><br>
+                    <label><input type="radio" name="medios-de-pago" class="medios-de-pago" value="mercado-pago">
+                        Mercadopago - Tarjetas Online, PagoFacil, RapiPago</label><br>
+                    <label><input type="radio" name="medios-de-pago" class="medios-de-pago" value="pago-gamer">
+                        Pago Gamer - Tarjetas Visa o MasterCard</label><br>
+                </div>
+
+                <button class="boton-compra" type="submit">Comprar</button>
+
             </form>
         </article>
-
-
-
-        </form>
         </div>
-
+        <div class="whatsapp">
+            <a href="#"><i class="fa-brands fa-whatsapp"></i></a>
+        </div>
     </main>
     <footer>
+        <div class="footer">
+
+            <div class="redes">
+
+                <div>
+                    <h3>¡Seguinos en nuestras redes sociales!</h3>
+                </div>
+                <div class="iconos">
+                    <i class="fab fa-whatsapp"></i>
+                    <i class="fab fa-instagram"></i>
+                    <i class="fab fa-twitter"></i>
+                </div>
+            </div>
+
+            <div class="informacion">
+                <ul class="lista1">
+                    <h4>Atención al cliente</h4>
+                    <li>+54 (011) 7079-9965</li>
+                    <li>Whatsapp: +54 (911) 3934-5678</li>
+                    <li>Nosotros</li>
+                    <li>Contáctanos</li>
+                </ul>
+                <ul class="lista2">
+                    <h4>Términos y condiciones</h4>
+                    <li>Condiciones de uso</li>
+                    <li>Politicas de garantía</li>
+                    <li>Políticas de privacidad</li>
+                </ul>
+
+                <ul class="lista3">
+                    <h4>Preguntas frecuentes</h4>
+                    <li>Preguntas frecuentes</li>
+                    <li>¿Cómo comprar?</li>
+                    <li>Envíos</li>
+
+                </ul>
+            </div>
+
+        </div>
+
+        </div>
 
     </footer>
 </body>
