--- a/Pixel/src/views/index.html
+++ b/Pixel/src/views/index.html
@@ -22,7 +22,7 @@
             <div class="icons-top-bar">
                 <a href="#"><i class="fa-regular fa-user"></i> Ingresar</a>
                 <a href="#">Registrarse</a>
-                <a href="#"><i class="fa badge" style="font-size:24px" value=2>&#xf07a;</i></a>
+                <a href="/productCart"><i class="fa badge" style="font-size:24px" value=2>&#xf07a;</i></a>
             </div>
         </div>
         <div class="burger-menu">
@@ -167,7 +167,7 @@
                     <h3>¡Seguinos en nuestras redes sociales!</h3>
                 </div>
                 <div class="iconos">
-                    <i class="fab fa-whatsapp"></i>
+                    <i class="fa-brands fa-facebook"></i>
                     <i class="fab fa-instagram"></i>
                     <i class="fab fa-twitter"></i>
                 </div>
