--- a/Pixel/src/views/productCart.html
+++ b/Pixel/src/views/productCart.html
@@ -20,18 +20,48 @@
                 <button type="submit"><i class="fa-solid fa-magnifying-glass"></i></button>
             </form>
             <div class="icons-top-bar">
-                <a href="#"><i class="fa-regular fa-user"></i>          Ingresar</a>
+                <a href="#"><i class="fa-regular fa-user"></i> Ingresar</a>
                 <a href="#">Registrarse</a>
-                <a href="/productCart"><i class="fa-solid fa-cart-shopping"></i></a>
+                <a href="/productCart"><i class="fa badge" style="font-size:24px" value=2>&#xf07a;</i></a>
             </div>
-
         </div>
+        <div class="burger-menu">
+            <i class="fa-solid fa-bars"></i>
+        </div>
+        <nav class="nav-bar">
 
+            <a href="#">
+                <div class="nav-bar-button">
+                    <p>Productos</p>
+                </div>
+            </a>
+
+            <a href="#">
+                <div class="nav-bar-button">
+                    <p>Arma tu PC</p>
+                </div>
+            </a>
+
+            <a href="#">
+                <div class="nav-bar-button">
+                    <p>PC listos</p>
+                </div>
+            </a>
+
+            <a href="#">
+                <div class="nav-bar-button">
+                    <p>Quiénes somos</p>
+                </div>
+            </a>
+
+            <a href="#">
+                <div class="nav-bar-button">
+                    <p>Ayuda</p>
+                </div>
+            </a>
+        </nav>
 
     </header>
-    <nav>
-
-    </nav>
     <main>
         <h2>Mi carrito</h2>
         <article>
