login del Pixel

--- a/Pixel/src/views/index.html
+++ b/Pixel/src/views/index.html
@@ -20,7 +20,7 @@
                 <button type="submit"><i class="fa-solid fa-magnifying-glass"></i></button>
             </form>
             <div class="icons-top-bar">
-                <a href="#"><i class="fa-regular fa-user"></i> Ingresar</a>
+                <a href="/login"><i class="fa-regular fa-user"></i> Ingresar</a>
                 <a href="#">Registrarse</a>
                 <a href="/productCart"><i class="fa badge" style="font-size:24px" value=2>&#xf07a;</i></a>
             </div>
