login del Pixel

--- a/Pixel/src/views/login.html
+++ b/Pixel/src/views/login.html
@@ -71,8 +71,9 @@
         <!-- ingresa -->
         <form action="/login" method="post" class="form-login">
             <h5>Iniciar Sesión con mi mail</h5>
-            <input class="controls" type="text" name="usuario" value="" placeholder="Usuario">
-            <input class="controls" type="password" name="contrasena" value="" placeholder="Contraseña">
+            <input style="position: relative; left: 710px; top: 30px; ;border-radius: 100px; " type="checkbox" name="" value=""> 
+            <input class="controls" type="text" style="color: rgb(255, 255, 255) ;" name="usuario" value="" placeholder="Usuario" required minlength="3" >
+            <input class="controls" type="password"  style="color: rgb(255, 255, 255);" name="contrasena" value="" placeholder="Contraseña" autocomplete="current-password" required minlength="3">
             <a style="color: rgb(36, 31, 31); padding: 6px;; " href="/register"> Registrame</a>
             <a class="contraseña" style="color: rgb(36, 31, 31);" href="#"> ¿Olvidastes tu Contraseña?</a>
             <div class="button-container">
