--- a/Pixel/public/css/login.css
+++ b/Pixel/public/css/login.css
@@ -26,6 +26,13 @@ body {
 
 }
 
+.cajita {
+    position: relative;
+    left: 710px;
+    top: 30px;
+    border-radius: 100px;
+}
+
 .search-bar {
     display: flex;
     align-items: center;
@@ -239,7 +246,7 @@ body {
     margin: 0 auto;
     margin-bottom: 8px;
     padding: 9px 10px;
-    background-color:#7EFF00;
+    background-color: #7EFF00;
     color: white;
     border: none;
     border-radius: 4px;
@@ -248,8 +255,8 @@ body {
 }
 
 .button-container button:hover {
-    background-color:#98FF31;
-    
+    background-color: #98FF31;
+
 }
 
 
@@ -381,22 +388,29 @@ footer div h3 {
 
 
 @media (min-width:320px) {
-/* BURGUER MENU */
-.burger-menu {
-    text-align: center;
-    font-size: 1.5em;
-    border-bottom: solid 1px #cac7ff;
-    background-color: rgb(100, 100, 100)
-}
 
-.burger-menu i {
-    text-align: center;
-    border-radius: 15%;
-    border: solid 1px #7EFF00;
-    padding: 10px;
-    color: #7EFF00;
-    margin-bottom: 15px
-}
+    .cajita {
+        position: relative;
+        left: 240px;
+        top: 30px;
+        border-radius: 100px;
+    }
+    /* BURGUER MENU */
+    .burger-menu {
+        text-align: center;
+        font-size: 1.5em;
+        border-bottom: solid 1px #cac7ff;
+        background-color: rgb(100, 100, 100)
+    }
+
+    .burger-menu i {
+        text-align: center;
+        border-radius: 15%;
+        border: solid 1px #7EFF00;
+        padding: 10px;
+        color: #7EFF00;
+        margin-bottom: 15px
+    }
 
     .redes {
         padding-top: 10px;
@@ -425,9 +439,34 @@ footer div h3 {
 
 }
 
+@media (min-width: 375px){
+    .cajita {
+        position: relative;
+        left: 280px;
+        top: 30px;
+        border-radius: 100px;
+    }
+}
+
+@media (min-width: 425px){
+    .cajita {
+        position: relative;
+        left: 340px;
+        top: 30px;
+        border-radius: 100px;
+    }
+}
+
 @media (min-width: 767px) {
 
-    .contraseña{
+    .cajita {
+        position: relative;
+        left: 500px;
+        top: 30px;
+        border-radius: 100px;
+    }
+
+    .contraseña {
         position: relative;
         left: 300px;
     }
@@ -537,21 +576,29 @@ footer div h3 {
 
 }
 
-@media (min-width: 1023px){
-    .form-login{
+@media (min-width: 1023px) {
+
+    .cajita {
+        position: relative;
+        left: 690px;
+        top: 30px;
+        border-radius: 100px;
+    }
+
+    .form-login {
         left: 120px;
         max-width: 800px;
     }
-    .contraseña{
+
+    .contraseña {
         position: relative;
         left: 500px;
     }
 }
 
-@media (min-width: 1439px){
-    .form-login{
+@media (min-width: 1439px) {
+    .form-login {
         left: 550px;
         max-width: 800px;
     }
 }
-
