login del Pixel

--- a/Pixel/src/views/login.html
+++ b/Pixel/src/views/login.html
@@ -19,7 +19,7 @@
 <body>
     <header>
         <div class="main-header-top-bar">
-            <h1 class="logo">Pixel!</h1>
+            <img class="logo" src="/img/logo-pixel.png" alt="logo">
             <form action='https://www.google.com/search?q=' method="get" class="search-bar">
                 <input type="text" placeholder="Monitores, teclados, tarjetas de video" name="q">
                 <button type="submit"><i class="fa-solid fa-magnifying-glass"></i></button>
