--- a/Pixel/public/css/index.css
+++ b/Pixel/public/css/index.css
@@ -111,6 +111,7 @@ body {
     display:flex;
     justify-content: space-around;
     display: none;
+    box-shadow: 3px 3px 30px 5px  #7EFF00;
 }
 
 .nav-bar a{
@@ -167,7 +168,8 @@ body {
 main {
     margin-left: auto;
     margin-right: auto;
-    width: 90%
+    width: 90%;
+    padding: 13px 0;
 }
 
 .inSale h2,.recomended h2 {
@@ -223,6 +225,7 @@ main {
 
 footer {
     background-color: #000;
+    box-shadow: 1px 1px 20px 1px  #7EFF00;
 }
 
 footer div h3 {
