--- a/Pixel/public/css/login.css
+++ b/Pixel/public/css/login.css
@@ -16,14 +16,9 @@ body {
 
 /* HEADER TOP BAR */
 .logo {
-    font-family: 'Press Start 2P';
-    letter-spacing: 2px;
-    color: #7EFF00;
-    padding: 10px 10px;
-    text-shadow: 0.2rem 0.5rem 0.5rem rgb(0, 0, 0);
-    font-size: 24px;
-    text-align: center;
-
+    width: 50px;
+    height: 50px;
+    margin-left: 8%;
 }
 
 .cajita {
@@ -75,7 +70,7 @@ body {
 
 
 .main-header-top-bar {
-    background-color: rgb(100, 100, 100);
+    background-color: black;
     padding: 10px;
     width: 100%;
 
@@ -121,7 +116,9 @@ body {
     display: flex;
     justify-content: space-around;
     display: none;
-    border-bottom: #7EFF00 solid 1px;
+    box-shadow: 3px 3px 30px 5px  #7EFF00;
+    background-color: #000;
+    border-top: solid 1px #cac7ff;
 }
 
 .nav-bar a {
@@ -306,6 +303,7 @@ body {
 footer {
     background-color: #000;
     width: 100%;
+    box-shadow: 3px 3px 30px 5px  #7EFF00;
 }
 
 footer div h3 {
