--- a/Pixel/src/views/productCart.html
+++ b/Pixel/src/views/productCart.html
@@ -35,7 +35,7 @@
     <main>
         <h2>Mi carrito</h2>
         <article>
-            <form action="/#" method="get" class="formulario-padre">
+            <form action="/productCart" method="get" class="formulario-padre">
                 <div class="productInfo">
                     <img src="/img/lenovo.jpg" alt="producto">
                     <p class="description">Laptop Lenovo</p>
