--- a/Pixel/public/css/productCart.css
+++ b/Pixel/public/css/productCart.css
@@ -129,6 +129,7 @@ img {
     width: 35%;
     font-weight: 535;
     transition: all 0.5s;
+    border: none;
 }
 .boton {
     background-color: #4A4A4A;
@@ -138,6 +139,7 @@ img {
     width: 35%;
     font-weight: 535;
     transition: all 0.5s;
+    border: none;
 }
 
 .boton:hover{
