se unifica header en el Index, se añade link en el logo, lineas divisoarias en el main e iconos para manipular el slider del banner.

--- a/Pixel/public/css/login.css
+++ b/Pixel/public/css/login.css
@@ -116,7 +116,7 @@ body {
     display: flex;
     justify-content: space-around;
     display: none;
-    box-shadow: 3px 3px 30px 5px  #7EFF00;
+    box-shadow: 1rem 1rem 3rem 1rem  #7EFF00;
     background-color: #000;
     border-top: solid 1px #cac7ff;
 }
