--- a/Pixel/src/views/login.html
+++ b/Pixel/src/views/login.html
@@ -13,7 +13,7 @@
         href="https://fonts.googleapis.com/css2?family=Lato:wght@300&family=Open+Sans:ital@1&family=Roboto:ital,wght@0,100;1,100&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="/css/login.css">
-    <title>Pixel E-Comerce</title>
+    <title>Ingresa</title>
 </head>
 
 <body>
