--- a/Pixel/src/views/register.html
+++ b/Pixel/src/views/register.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PIXEL! | REGISTER </title>
+    <title>Registro</title>
     <link rel="stylesheet" href="./css/register.css">
     <script src="https://kit.fontawesome.com/d47e928f31.js" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -25,7 +25,7 @@
             </form>
             <div class="icons-top-bar">
                 <a href="/login"><i class="fa-regular fa-user"></i> Ingresar</a>
-                <a href="#">Registrarse</a>
+                <a href="/register">Registrarse</a>
                 <a href="/productCart"><i class="fa badge" style="font-size:24px" value=2>&#xf07a;</i></a>
             </div>
         </div>
