--- a/Pixel/src/views/productCart.html
+++ b/Pixel/src/views/productCart.html
@@ -21,7 +21,7 @@
             </form>
             <div class="icons-top-bar">
                 <a href="/login"><i class="fa-regular fa-user"></i> Ingresar</a>
-                <a href="#">Registrarse</a>
+                <a href="/register">Registrarse</a>
                 <a href="/productCart"><i class="fa badge" style="font-size:24px" value=2>&#xf07a;</i></a>
             </div>
         </div>
