--- a/Pixel/src/views/login.html
+++ b/Pixel/src/views/login.html
@@ -19,7 +19,7 @@
 <body>
     <header>
         <div class="main-header-top-bar">
-            <img class="logo" src="/img/logo-pixel.png" alt="logo">
+            <img class="logo" src="/img/logo-pixel-final.png" alt="logo">
             <form action='https://www.google.com/search?q=' method="get" class="search-bar">
                 <input type="text" placeholder="Monitores, teclados, tarjetas de video" name="q">
                 <button type="submit"><i class="fa-solid fa-magnifying-glass"></i></button>
@@ -74,8 +74,8 @@
             <input class="cajita" type="checkbox" name="" value=""> 
             <input class="controls" type="text" style="color: rgb(255, 255, 255) ;" name="usuario" value="" placeholder="Usuario" required minlength="3" >
             <input class="controls" type="password"  style="color: rgb(255, 255, 255);" name="contrasena" value="" placeholder="Contraseña" autocomplete="current-password" required minlength="3">
-            <a style="color: rgb(36, 31, 31); padding: 6px;; " href="/register"> Registrame</a>
-            <a class="contraseña" style="color: rgb(36, 31, 31);" href="#"> ¿Olvidastes tu Contraseña?</a>
+            <a class="registrarme" ; padding: 6px;; href="/register"> Registrame</a>
+            <a class="contraseña"; href="#"> ¿Olvidastes tu Contraseña?</a>
             <div class="button-container">
                 <a style="text-decoration: none;" href="/index"><button type="submit"
                         style="color: #000;">LOGIN</button></a>
