Modificaciones en Carrito

--- a/Pixel/public/css/productCart.css
+++ b/Pixel/public/css/productCart.css
@@ -1,7 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&family=Roboto:wght@300;400&display=swap');
 
-@import url('https://fonts.googleapis.com/css2?family=Bangers&family=Roboto&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@500&display=swap');
 
 * {
     margin: 0;
@@ -12,7 +10,7 @@
 body {
     font-family: 'Roboto', Arial;
     font-size: 12px;
-    background-color: #080808;
+    background-color:black;
 }
 
 
@@ -69,7 +67,7 @@ body {
 
 
 .main-header-top-bar {
-    background-color: rgb(100, 100, 100);
+    background-color: black;
     padding: 10px;
     width: 100%;
 
@@ -141,8 +139,8 @@ body {
 .burger-menu {
     text-align: center;
     font-size: 1.5em;
-    border-bottom: solid 1px #cac7ff;
-    background-color: rgb(100, 100, 100)
+    
+    background-color: black
 }
 
 .burger-menu i {
@@ -179,8 +177,9 @@ h2 {
 img {
     width: 90%;
     padding: 5px;
+    border-radius: 15px;
 }
-
+/*Botones*/
 .boton-compra {
     background-color: #4A4A4A;
     border-radius: 10px;
@@ -231,7 +230,7 @@ img {
     text-align: center;
     justify-content: center;
     background-color: rgb(100, 100, 100);
-    /* padding: 5px; */
+    border-radius: 5px;
 
     font-size: 17px;
 }
@@ -361,7 +360,7 @@ footer div h3 {
 
     .main-header-top-bar {
         display: flex;
-        border-bottom: solid 1px #efefef;
+        
         padding: 15px;
         align-items: center;
         justify-content: space-between;
@@ -386,9 +385,6 @@ footer div h3 {
         font-size: 14px;
     }
 
-    .banner img {
-        display: initial
-    }
 
     .burger-menu {
         display: none;
@@ -414,6 +410,7 @@ footer div h3 {
     .formulario-padre img {
         max-width: 200px;
         flex-grow: 1;
+        border-radius: 15px  ;
     }
 
     .description,
