--- a/Pixel/src/views/productCart.html
+++ b/Pixel/src/views/productCart.html
@@ -72,7 +72,7 @@
                     <p class="price">$137.500</p>
                     <p>Cantidad de productos</p>
                     <input type="number" id="numero" class="boton">
-                    <button class="boton" type="reset">Borrar</button>
+                    <button class="boton" type="reset"><i class="fa-solid fa-trash"></i></button>
                 </div>
 
                 <div class="productInfo">
@@ -82,7 +82,7 @@
                     <p class="price">$145.999</p>
                     <p>Cantidad de productos</p>
                     <input type="number" id="numero" class="boton">
-                    <button class="boton" type="reset">Borrar</button>
+                    <button class="boton" type="reset"><i class="fa-solid fa-trash"></i></button>
                 </div>
                 <div class="medios-de-pago-padre">
                     <p>Medios de medios de pago</p>
