--- a/Pixel/public/css/productCart.css
+++ b/Pixel/public/css/productCart.css
@@ -15,14 +15,24 @@ body {
 
 
 /* HEADER TOP BAR */
-.logo {
-    font-family: 'Press Start 2P';
-    letter-spacing: 2px;
-    color: #7EFF00;
-    padding: 10px 10px;
-    text-shadow: 0.2rem 0.5rem 0.5rem rgb(0, 0, 0);
-    font-size: 24px;
-    text-align: center;
+.logo2 img {
+    display: flex;
+    width:95px;
+    height: 85px;
+    margin: 10px 0px 10px 35%;
+   border-radius: 16px;
+    border: #7EFF00 0.5px solid;
+    box-shadow:  -0.2rem -0.2rem 0.0rem -0.1rem #7EFF00;
+}
+
+.logo1 {
+    display: none;
+    height: 85px;
+    width: 180px;
+    margin-left: 2%;
+    padding-left: 2%;
+    border-radius: 64%;
+    box-shadow: inset 0rem 3em 3em -2.8em #7eff00;
 }
 
 .search-bar {
@@ -112,6 +122,7 @@ body {
     display:flex;
     justify-content: space-around;
     display: none;
+    box-shadow: 0rem 0.6rem 1rem 0.5rem #7EFF00;
 }
 
 .nav-bar a{
@@ -163,8 +174,13 @@ body {
 }
 
 /* CARRITO */
-
-
+section{
+    display: none;
+    
+}
+section p{
+    flex: 1;
+}
 h2 {
     border-radius: 5px;
     border-top: #7EFF00 solid 2px;
@@ -181,10 +197,10 @@ img {
 }
 /*Botones*/
 .boton-compra {
-    background-color: #4A4A4A;
+    background-color:#7EFF00 ;
     border-radius: 10px;
     padding: 5px;
-    color: #cac7ff;
+    color: black;
     width: 35%;
     font-weight: 535;
     transition: all 0.5s;
@@ -219,10 +235,6 @@ img {
     border-radius: 5px;
 }
 
-/* a {
-    font-size: 14px;
-    color: aliceblue;
-} */
 
 
 .formulario-padre {
@@ -231,8 +243,9 @@ img {
     justify-content: center;
     background-color: rgb(100, 100, 100);
     border-radius: 5px;
-
+    margin-bottom: 10px;
     font-size: 17px;
+    padding-bottom: 10px;
 }
 
 .medios-de-pago-padre {
@@ -249,9 +262,14 @@ img {
     color: #7EFF00;
     border-top: #7EFF00 2px solid;
 }
+.medios-de-pago-padre p{
+    color: aliceblue;
+}
 
 footer {
     background-color: #000;
+    box-shadow: 0rem 0.6rem 3rem 0.3rem #7eff00;
+    margin-top: 10px;
 }
 
 footer div h3 {
@@ -356,8 +374,33 @@ footer div h3 {
     .nav-bar{
         display:flex
     }
-
-
+    .logo2 img {
+        display: none;
+    }
+    
+    .logo1 {
+        display: flex;
+       
+    }
+section{
+    display: flex;
+    color: aliceblue;
+    justify-content: center;
+    background-color: rgb(100, 100, 100);
+    border-radius: 5px;
+    font-size: 17px;
+    margin-left: 30%;
+    
+    
+}
+section p{
+    margin-left: 2%;
+    margin-top: 19px;
+    font-size: 19px;
+}
+.p-precio{
+    margin-left: 12%;
+}
     .main-header-top-bar {
         display: flex;
         
@@ -394,9 +437,6 @@ footer div h3 {
         width: 95%
     }
 
-    /* .main-header-top-bar {
-        border-bottom: none;
-    } */
 
     .productInfo {
         display: flex;
@@ -427,10 +467,20 @@ footer div h3 {
     .boton-compra{
         max-width: 160px;
     }
-    
 }
 
 @media (min-width: 1020px) {
+    .medios-de-pago-padre{
+        font-size: 20px;
+        
+    }
+    .formulario-padre p{
+        font-size: 20px;
+    }
+    .medios-de-pago-padre p{
+        text-align: center;
+        margin-top: 5px;
+    }
     .search-bar{
         width:45%;
         max-width: 700px;
@@ -439,5 +489,15 @@ footer div h3 {
     .icons-top-bar {
 
         width: 30%;
+    }
+    section{
+        margin-left: 27%;
+    }
+    section p{
+        margin-left: 0%;
+        margin-top: 5px;
+    }
+    .p-precio{
+        margin-left: 21%;
     }
 }
