--- a/Pixel/src/views/productCart.html
+++ b/Pixel/src/views/productCart.html
@@ -14,7 +14,10 @@
 <body>
     <header>
         <div class="main-header-top-bar">
-            <h1 class="logo">Pixel!</h1>
+            <!-- <a href="./" class="logo"> Pixel!</a> LOGO ALTERNATIVO-->
+            <a href="./" class="logo1"> <img src="/img/pixel-logo.png" alt="logo"></a>
+            <!-- logo-mobile -->
+            <a href="./" class="logo2"> <img src="/img/logo-pixel-mobile.png" alt="logo"></a>
             <form action='https://www.google.com/search?q=' method="get" class="search-bar">
                 <input type="text" placeholder="Monitores, teclados, tarjetas de video" name="q">
                 <button type="submit"><i class="fa-solid fa-magnifying-glass"></i></button>
@@ -66,11 +69,12 @@
         <h2>Mi carrito</h2>
         <article>
             <form action="/productCart" method="get" class="formulario-padre">
+                <section><p>Descripcion</p><p class="p-precio">Precio</p><p>Cantidad de productos</p></section>
                 <div class="productInfo">
                     <img src="/img/lenovo.jpg" alt="producto">
                     <p class="description">Laptop Lenovo</p>
                     <p class="price">$137.500</p>
-                    <p>Cantidad de productos</p>
+                   
                     <input type="number" id="numero" class="boton">
                     <button class="boton" type="reset"><i class="fa-solid fa-trash"></i></button>
                 </div>
@@ -80,7 +84,7 @@
 
                     <p class="description">Laptop Bangho</p>
                     <p class="price">$145.999</p>
-                    <p>Cantidad de productos</p>
+                   
                     <input type="number" id="numero" class="boton">
                     <button class="boton" type="reset"><i class="fa-solid fa-trash"></i></button>
                 </div>
@@ -94,7 +98,7 @@
                     <label><input type="radio" name="medios-de-pago" class="medios-de-pago" value="pago-gamer">
                         Pago Gamer - Tarjetas Visa o MasterCard</label><br>
                 </div>
-
+                <p>Total $283.499</p>
                 <button class="boton-compra" type="submit">Comprar</button>
 
             </form>
